delete basic if else and create variables for 1000,100,10,1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form id="roman-numeral">
         <div class="form-group">
           <label for="number">Enter a number and find out if what it is in Roman Numerals</label>
-          <input id="number" type="text">
+          <input id="number" type="number">
         </div>
 
         <button type="submit" class="btn">Find out!</button>
